# example-pipeline-project

./: Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yaml  test.yaml
business/: pyproject.toml
business/src/: filter.py
config/: example_filter.json  example_job.toml
core/: pyproject.toml
core/src/: filter.py
data/: generator.py  pyproject.toml
data/src/: generator.py
pipeline/task_lib/: clean.py  format.py  load.py  pyproject.toml
task/: pyproject.toml
tasks/: pyproject.toml
tasks/src/: job.py
tests/: conftest.py  test_business.py  test_business_lib.py  test_tasks.py  test_version.py
