[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Chris Pryer <cnpryer@gmail.com>"]
packages = [
    { include = "business" },
    { include = "core" },
    { include = "data" },
    { include = "tasks" }
]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.13.55"
prefect = "^1.2.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pre-commit = "^2.19.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
ignore = "E203"