[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Chris Pryer <cnpryer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.13.23"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
